--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,13 @@
   margin: 0;
 }
 .bgImage {
-  background-image: url("../../public/image/BlogImage.png");
-  width: 713.817px;
-  height: 707px;
+  background-image: url("../../public/image/BetterImage.jpg");
+  width: 702px;
+  height: 700px;
+}
+
+.bgImageMun {
+  background-image: url("../../public/image/BetterImage.jpg");
+  width: 702px;
+  height: 700px;
 }
